Use Java 11 Files APIs